[package]
name = "lpc-experimental"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.9.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-sync = { version = "0.7.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-time = { version = "0.5.0", path = "../embassy/embassy-time", features = ["defmt"] }
panic-halt = "1.0.0"
critical-section = "1.1.2"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0"}
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
panic-semihosting = "0.6.0"
nxp-pac = { version = "0.1.0", features = ["lpc55s69_cm33_core0"], git = "https://github.com/i509VCB/nxp-pac", rev = "b736e3038254d593024aaa1a5a7b1f95a5728538"}
embassy-hal-internal = { version = "0.3.0", path = "../embassy/embassy-hal-internal", features = ["cortex-m", "prio-bits-2"] }
portable-atomic = "1.11.1"

[features]
default = ["rt"]

rt = ["nxp-pac/rt"]
